--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script type="text/javascript"
+            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -31,7 +34,7 @@
         <h3>
 <a name="go-go-mathjax" class="anchor" href="#go-go-mathjax"><span class="octicon octicon-link"></span></a>Go go MathJax</h3>
 
-<pre><code>\int_{-\infty}^{\infty} e^{-x^2} dx = \sqrt{\int_0^{\infty} 2\pi r e^{-r^2} dr} = \sqrt{2\pi}. 
+<pre><code>\[\int_{-\infty}^{\infty} e^{-x^2} dx = \sqrt{\int_0^{\infty} 2\pi r e^{-r^2} dr} = \sqrt{2\pi}.\] 
 </code></pre>
 
 <h3>
