--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <h3>
 <a name="go-go-mathjax" class="anchor" href="#go-go-mathjax"><span class="octicon octicon-link"></span></a>Go go MathJax</h3>
 
-<pre><code>\[\int_{-\infty}^{\infty} e^{-x^2} dx = \sqrt{\int_0^{\infty} 2\pi r e^{-r^2} dr} = \sqrt{2\pi}.\] 
-</code></pre>
+<p>\[\int_{-\infty}^{\infty} e^{-x^2} dx = \sqrt{\int_0^{\infty} 2\pi r e^{-r^2} dr} = \sqrt{2\pi}.\]</p>
 
 <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
