--- a/index.html
+++ b/index.html
@@ -10,4 +10,14 @@ title: Your New Jekyll Site
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+  <p>
+  \[\int_{-\infty}^{\infty} e^{-x^2} dx = \sqrt{\int_0^{\infty} 2\pi r e^{-r^2} dr} = \sqrt{\pi}.\]
+  </p>
+
+## Markup
+
+```
+println( "foo\n")
+```
+
 </div>
